[fix](ABC-622): Change overflow to hide vertical scroll-bar on container

--- a/src/modules/base/activityTimeline/horizontalActivityTimeline.css
+++ b/src/modules/base/activityTimeline/horizontalActivityTimeline.css
@@ -45,7 +45,7 @@
 }
 
 .avonni-activity-timeline__horizontal-timeline {
-    overflow-x: hidden;
+    overflow: hidden;
     overscroll-behavior-x: contain;
     overscroll-behavior-block: contain;
 }
